--- a/app/views/clientprofiles/edit.html.erb
+++ b/app/views/clientprofiles/edit.html.erb
@@ -1,7 +1,5 @@
+<div class="container white-text">
 <h4>Editar Perfil</h4>
-<div class="container">
+
   <%= render 'form' %>
 </div>
-
-<%= link_to 'Show', @clientprofile %> |
-<%= link_to 'Back', clientprofiles_path %>
