--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -2,10 +2,8 @@
 
 <!-- if user is signed in-->
 	<% if user_signed_in? %>
-			<%= image_tag current_user.profile.cover(:strech), class:"cover-img responsive-img", style:"position:relative;"%>
-			<span class="profile-img">
-				<%= image_tag current_user.profile.avatar(:mini), class:"circle", size:"100" %>
-			</span>
+
+				<%= image_tag current_user.profile.avatar(:mini), class:"responsive-img"%>
 
 <!-- if master admin is signed in -->
 		<% elsif master_admin_signed_in? %>
@@ -16,11 +14,7 @@
 
 <!--if client is signed in-->
 		<% elsif client_signed_in? %>
-			<%= image_tag "no_cover.jpg", class:"responsive-img" %>
-
-			<span class="profile-img">
-				<%= link_to image_tag(current_client.clientprofile.avatar, class:"circle", size:"74"), (clientprofile_path(current_client.clientprofile)) %>
-			</span>
+				<%= link_to image_tag(current_client.clientprofile.avatar, class:"circle", style:"max-width:30%;"), (clientprofile_path(current_client.clientprofile)) %>
 
 <!-- else show a default item -->
 		<% else %>
