--- a/app/views/clientprofiles/_form.html.erb
+++ b/app/views/clientprofiles/_form.html.erb
@@ -1,4 +1,4 @@
-<% if current_client.clientprofile.name == nil %>
+<% if current_client.clientprofile.avatar = nil %>
   <h4>TE DAMOS LA CORIDAL BIENVENIDA A NUESTRA COMUNIDAD</h4>
   <p>
     Estamos complacidos de tenerte con nosotros.
@@ -29,6 +29,11 @@
     </div>
 
     <div class="field">
+      <label for="text_bio">Cuentanos sobre tí</label>
+      <%= f.text_area :biography, id:"text_bio", class:"input-field col s12", style:"max-width:100%; height:150px;" ,input_html: { hidden: true }  %>
+    </div>
+
+<!--    <div class="field">
       <b>Foto de perfil</b>
         <div class="row">
             <img src="http://icons.iconarchive.com/icons/graphicloads/100-flat/256/contact-icon.png" id="image" style="max-height:120px;" />
@@ -45,10 +50,9 @@
           </div>
         </div>
 
+    </div> -->
 
-    </div>
-
-    <div class="actions">
+    <div class="row ">
 
       <%= button_tag(type: 'submit', id:"btn-post", class: "btn blue") do %>
        <i class="material-icons">check_circle</i>
@@ -57,8 +61,8 @@
     </div>
   <% end %>
 
-  <div>
-      <%= link_to "Cerrar Seción", destroy_client_session_path, method: :delete, class:"btn-large red" %>
+  <div class="">
+      <%= link_to "Cerrar Seción", destroy_client_session_path, method: :delete, class:"btn red" %>
   </div>
 
 </div>
@@ -77,17 +81,16 @@
             $('#btn-post').attr('disabled', true);
         }
     })
+
+    $('#text_bio').keyup(function(){
+        if($(this).val().length !=0){
+            $('#btn-post').attr('disabled', false);
+        }
+        else
+        {
+            $('#btn-post').attr('disabled', true);
+        }
+    })
   });
 
-  document.getElementById("files").onchange = function () {
-    var reader = new FileReader();
-
-    reader.onload = function (e) {
-        // get loaded data and render thumbnail.
-        document.getElementById("image").src = e.target.result;
-    };
-
-    // read the image file as a data URL.
-    reader.readAsDataURL(this.files[0]);
-};
 </script>
