--- a/app/views/follows/unfollow.js.erb
+++ b/app/views/follows/unfollow.js.erb
@@ -1,1 +1,3 @@
 $("#follow_profile").html("<%= j render(partial: 'followbtn', locals: { profile: @profile }) %>")
+
+$("#follow_profile_client").html("<%= j render(partial: 'followbtn_client', locals: { profile: @profile }) %>")
