--- a/app/assets/stylesheets/materialize.css
+++ b/app/assets/stylesheets/materialize.css
@@ -6456,7 +6456,7 @@ button:focus {
 
 label {
   font-size: 0.8rem;
-  color: #9e9e9e; }
+  color: ##DCDCDC; }
 
 /***************************
    Text Inputs + Textarea
@@ -6527,7 +6527,7 @@ input[type=text], input[type=password], input[type=email], input[type=url], inpu
   position: relative;
   margin-top: 1rem; }
   .input-field label {
-    color: #9e9e9e;
+    color: #DCDCDC;
     position: absolute;
     top: 0.8rem;
     left: 0.75rem;
