--- a/app/views/profiles/_profile_info.html.erb
+++ b/app/views/profiles/_profile_info.html.erb
@@ -9,10 +9,10 @@
     </div>
   </div>
 
-  <div style="padding-left:5%;" class="col s8 m6">
+  <div style="padding-left:5%;" class="col s8 m6 white-text">
     <b><%= @profile.name %></b>
     <br>
-    <table class="striped centered">
+    <table class="striped centered black-text">
       <thead>
         <tr>
             <th data-field="id">Publicaciones</th>
