--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -10,6 +10,10 @@
   <%= link_to "¿Has olvidado tu contraseña?", new_password_path(resource_name) %><br />
 <% end -%>
 
+<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <%= link_to "¿Eres administrador?", new_user_session_path %><br />
+<% end -%>  
+
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "¿No has recibido las instrucciones de confirmación?", new_confirmation_path(resource_name) %><br />
 <% end -%>
