--- a/app/views/clientprofiles/_form.html.erb
+++ b/app/views/clientprofiles/_form.html.erb
@@ -23,14 +23,14 @@
 
     <div class="field">
       <div id="input_body" class="input-field col s12">
-        <%= f.text_field :name, id:"text_area_name", class:"materialize-textarea", length:"50", input_html: { hidden: true } %>
+        <%= f.text_field :name, id:"text_area_name", class:"materialize-textarea", length:"50" %>
         <label for="text_area_name">Tu Nombre (Requerido)</label>
       </div>
     </div>
 
     <div class="field">
       <label for="text_bio">Cuentanos sobre tí</label>
-      <%= f.text_area :biography, id:"text_bio", class:"input-field col s12", style:"max-width:100%; height:150px;" ,input_html: { hidden: true }  %>
+      <%= f.text_area :biography, id:"text_bio", class:"input-field col s12", style:"max-width:100%; height:150px;"%>
     </div>
 
 <!--    <div class="field">
