--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -14,12 +14,27 @@
 
 <!--if client is signed in-->
 		<% elsif client_signed_in? %>
-				<%= link_to image_tag(current_client.clientprofile.avatar, class:"circle", style:"max-width:30%;"), (clientprofile_path(current_client.clientprofile)) %>
+
+		<ul class="collection">
+			<li class="collection-item">
+				<div class="row" style="margin-bottom:0px;">
+					<div class="col s4">
+						<%= link_to image_tag(current_client.clientprofile.avatar, class:"circle", style:"max-width:100%;"), (clientprofile_path(current_client.clientprofile)) %>
+					</div>
+				<div class="col s6 gray-text">
+						<p >
+							<b><%= current_client.clientprofile.name %></b>
+						</p>
+					</div>
+				</div>
+			</li>
+		</ul>
 
 <!-- else show a default item -->
 		<% else %>
 				<%= image_tag "no_cover.jpg", class:"responsive-img" %>
-				<span class="profile-img">
+				<span class="profile-img" style="    display: table-cell;
+    vertical-align: middle ">
 					<%= image_tag "unknown_user.png", class:"circle", size:"64" %>
 				</span>
 
