--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,7 +7,7 @@
       <div class="row">
           <div class="card">
             <div class="card-image">
-              <%= image_tag profile.cover.url(:card) %>
+              <img src="<%= profile.cover.url%>" alt="" />
               <span style="text-shadow: 0px 0px 6px rgba(0, 0, 0, 1);" class="card-title text_transp"><%= profile.name %></span>
             </div>
             <div class="card-content">
