--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <a href="#" class="col s2"><i class="material-icons icon-navbar">notifications <!--span class="badge1">1</span--></i></a>
         <a href= "/categories" class="col s2"><i class="material-icons icon-navbar">explore</i></a>
         <a href="<% link_to root_path %>" class="col s2"><i class="material-icons icon-navbar">favorite</i></a>
-        <a href="<% link_to search_path %>" class="col s2"><i class="material-icons icon-navbar">search</i></a>
+        <a href="/search" class="col s2"><i class="material-icons icon-navbar">search</i></a>
       </div>
 
       <ul class="right hide-on-med-and-down">
@@ -28,7 +28,7 @@
 
       </ul>
       <ul class="side-nav" id="mobile-demo">
-          <%= render "/layouts/lateral_bar" %>
+
 
       </ul>
     </div>
