--- a/app/views/offers/_offerts.html.erb
+++ b/app/views/offers/_offerts.html.erb
@@ -13,8 +13,8 @@
 <div class="col s6">
   <ul class="collection">
     <li class="collection-item">
-      <%= offer.titulo %>
-      <img src="<%= offer.image.url %>" alt="" class="responsive-img" />
+      <b><%= offer.titulo %></b>
+      <img src="<%= offer.image.url %>" alt="" class="responsive-img materialboxed" />
     </li>
     <li class="collection-item">
       <%= offer.descripcion %>
