Fix edit form for posts

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>Editing Post</h1>
+<div class="container white-text">
+  <h5>Editar Publicación</h5>
 
-<%= render 'form' %>
+  <%= render 'form_nomodal' %>
 
-<%= link_to 'Show', @post %> |
+  <%= link_to 'Volver', root_path %> |
+</div>
