--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -70,7 +70,14 @@ position: relative;
 }
 
 html, body {
-    height: 100%;
-    background-size: cover;
-    background:url("/assets/login.jpg") no-repeat center center fixed;
+  background:#2196f3;
+    /*background:url("/assets/login.jpg");
+    background-repeat:repeat-y;*/
+
+    background-position:top center;
+
+    background-attachment:fixed
+
+    background-size:cover;
+
 }
