Restrict offer form to other user

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -15,6 +15,12 @@
   </div>
 
   <div id="tab2" class="col s12">
+    <% if user_signed_in? %>
+        <% if current_user.id == @profile.user_id %>
+          <%= link_to "Publicar Oferta", new_offer_path, class:"btn teal right" %>
+        <% end %>
+    <% end %>
+
     <%= render "offers/offerts" %>
   </div>
   <div id="tab3" class="col s12">
