--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -9,7 +9,7 @@
 
   <li>
     <div class="collapsible-header"> <i class="material-icons">business</i> Categoría </div>
-    <div class="collapsible-body">
+    <div class="collapsible-body" style="background:white;">
         <p class="field">
           <%= f.label "Categoria" %>
           <%= f.select :category_id, options_from_collection_for_select(Category.all, :id, :name) %>
@@ -25,7 +25,7 @@
 
  <li>
     <div class="collapsible-header"> <i class="material-icons">text_fields</i> Titulo </div>
-    <div class="collapsible-body">
+    <div class="collapsible-body" style="background:white;">
             <p class="field">
               <%= f.label "Nombre del negocio o servicio" %><br>
               <%= f.text_field :name %>
@@ -35,7 +35,7 @@
 
   <li>
     <div class="collapsible-header"> <i class="material-icons">sort</i> Descripcion </div>
-    <div class="collapsible-body">
+    <div class="collapsible-body" style="background:white;">
         <p class="field">
           <%= f.label "Parrafo descriptivo sobre el negocio o servicio" %><br>
           <%= f.text_area :body, style:"max-width: 100%; height: 238px;" %>
@@ -45,7 +45,7 @@
 
   <li>
     <div class="collapsible-header"> <i class="material-icons">directions</i> Dirección</div>
-    <div class="collapsible-body">
+    <div class="collapsible-body" style="background:white;">
           <p class="field">
             <%= f.label :direccion %><br>
             <%= f.text_area :direccion, style:"max-width: 100%; height: 170px;"%>
@@ -55,7 +55,7 @@
 
  <li>
   <div class="collapsible-header"> <i class="material-icons">face</i> Imagen de Perfil </div>
-  <div class="collapsible-body">
+  <div class="collapsible-body" style="background:white;">
 
       <p style="margin-bottom: 3%">
         <b>Imagen de Perfil</b>
@@ -76,7 +76,7 @@
 
    <li>
     <div class="collapsible-header"> <i class="material-icons">add_a_photo</i> Imagen de portada </div>
-    <div class="collapsible-body">
+    <div class="collapsible-body" style="background:white;">
 
         <p style="margin-bottom: 3%">
           <b>Imagen de portada</b>
