--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="white-text container">
 
 <p id="notice"><%= notice %></p>
 
@@ -11,7 +11,7 @@
 			<i class="material-icons">
 				<%= category.icon %>
 			</i> <%= category.name %>
-			        
+
 
 		</a>
 
