--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,29 +1,43 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Iniciar sesión", new_session_path(resource_name) %><br />
-<% end -%>
+<div class="row">
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Registrarse", new_registration_path(resource_name) %><br />
-<% end -%>
-
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "¿Has olvidado tu contraseña?", new_password_path(resource_name) %><br />
-<% end -%>
-
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "¿Eres administrador?", new_user_session_path %><br />
-<% end -%>  
-
-<%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "¿No has recibido las instrucciones de confirmación?", new_confirmation_path(resource_name) %><br />
-<% end -%>
-
-<%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "¿No has recibido las instrucciones para desbloquear?", new_unlock_path(resource_name) %><br />
-<% end -%>
-
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Iniciar sesión con: #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
+<div class="col s12" style="margin-top:1%;">
+  <%- if controller_name != 'sessions' %>
+    <%= link_to "Atrás", :back, class:"btn-large red" %>
   <% end -%>
-<% end -%>
+</div>
+
+<div class="col s12" style="margin-top:1%;">
+    <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+      <%= link_to "Registrarse", new_registration_path(resource_name), class:"btn indigo" %>
+    <% end -%>
+</div>
+
+<div class="col s12" style="margin-top:1%;">
+  <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+    <%= link_to "Recuperar Contraseña", new_password_path(resource_name), class:"btn indigo" %>
+  <% end -%>
+</div>
+
+<div class="col s12" style="margin-top:1%;">
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+    <%= link_to "¿Eres administrador?", new_user_session_path, class:"btn indigo"%>
+  <% end -%>
+</div>
+
+<div class="col s12" style="margin-top:1%;">
+  <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
+    <%= link_to "¿No has recibido las instrucciones de confirmación?", new_confirmation_path(resource_name) %>
+  <% end -%>
+</div>
+
+  <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
+    <%= link_to "¿No has recibido las instrucciones para desbloquear?", new_unlock_path(resource_name) %>
+  <% end -%>
+
+  <%- if devise_mapping.omniauthable? %>
+    <%- resource_class.omniauth_providers.each do |provider| %>
+      <%= link_to "Iniciar sesión con: #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %>
+    <% end -%>
+  <% end -%>
+
+</div>
