--- a/app/assets/stylesheets/materialize.css
+++ b/app/assets/stylesheets/materialize.css
@@ -1561,7 +1561,7 @@
   background-color: #9e9e9e !important; }
 
 .grey-text {
-  color: #9e9e9e !important; }
+  color: #525252 !important; }
 
 .grey.darken-1 {
   background-color: #757575 !important; }
@@ -1582,10 +1582,10 @@
   color: #424242 !important; }
 
 .grey.darken-4 {
-  background-color: #212121 !important; }
+  background-color: #291818 !important; }
 
 .grey-text.text-darken-4 {
-  color: #212121 !important; }
+  color: #291818 !important; }
 
 .shades.black {
   background-color: #000000 !important; }
@@ -2585,7 +2585,7 @@ nav ul a span.badge {
 
 @font-face {
   font-family: "Material-Design-Icons";
-  src: url("../font/material-design-icons/Material-Design-Icons.eot?#iefix") format("embedded-opentype"), url("../font/material-design-icons/Material-Design-Icons.woff2") format("woff2"), url("../font/material-design-icons/Material-Design-Icons.woff") format("woff"), url("../font/material-design-icons/Material-Design-Icons.ttf") format("truetype"), url("../font/material-design-icons/Material-Design-Icons.svg#Material-Design-Icons") format("svg");
+  src: url("Material-Design-Icons.woff2") format("woff2"), url("Material-Design-Icons.woff") format("woff"), url("Material-Design-Icons.ttf") format("truetype");
   font-weight: normal;
   font-style: normal; }
 
@@ -5875,7 +5875,7 @@ small {
   display: flex;
   position: relative;
   height: 48px;
-  background-color: #fff;
+  background-color: #F5F5F5;
   margin: 0 auto;
   width: 100%;
   white-space: nowrap; }
@@ -5898,7 +5898,7 @@ small {
     width: 15%;
     min-width: 80px; }
     .tabs .tab a {
-      color: #ee6e73;
+      color: #646464;
       display: block;
       width: 100%;
       height: 100%;
