--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container">
-	<h5 class="white-text"><%= @category.name %></h5>
+	<h5 class="grey-text darken-4"><%= @category.name %></h5>
 	<% @category.profiles.each do |profile| %>
 
       <div class="row">
