--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container white-text">
+<div class="container grey-text darken-4">
 <h5>Registrarse</h5>
 <% if session_path(resource) == "/users/sign_in" %>
     <h5 class="yellow-text">Administrador</h5>
