--- a/app/views/hearts/_button.html.erb
+++ b/app/views/hearts/_button.html.erb
@@ -2,7 +2,7 @@
 <% if user_signed_in? %>
 
   <% if current_user.heart?(post)%>
-          <%= button_to unheart_path(post_id: post.id), remote: true, method: :delete, style:"width:27%;", class:"col s4 btn-flat center" do%>
+          <%= button_to unheart_path(post_id: post.id), remote: true, method: :delete, style:"width:50%;", class:"col s4 btn-flat center" do%>
 
             <i style="vertical-align: middle; font-size:2.5em;" class="material-icons red-text">favorite</i>
 
@@ -14,7 +14,7 @@
 
           <% else %>
 
-        <%= button_to heart_path(post_id: post.id), remote: true, style:"width:27%;", class:"col s4 btn-flat center" do%>
+        <%= button_to heart_path(post_id: post.id), remote: true, style:"width:50%;", class:"col s4 btn-flat center" do%>
                 <i style="vertical-align: middle; font-size:2.5em;" class="material-icons">favorite_border</i>
 
                 <% if post.hearts.count > 0 %>
@@ -28,25 +28,31 @@
 <% elsif client_signed_in? %>
 
   <% if current_client.heart?(post)%>
-          <%= button_to unheart_path(post_id: post.id), remote: true, method: :delete,style:"width:27%;", class:"col s4 btn-flat center" do%>
+          <%= button_to unheart_path(post_id: post.id), remote: true, method: :delete,style:"width:50%;", class:"col s4 btn-flat center" do%>
 
             <i style="vertical-align: middle; font-size:2.5em;" class="material-icons red-text">favorite</i>
 
-                <% if post.hearts.count > 0 %>
-                  <span class="blue-text like-text"><b><%= post.hearts.count%></b></span>
-                <% end %>
+
 
             <% end %>
-
+            <% if post.hearts.count > 0 %>
+              <span class="blue-text like-text"><b><%= post.hearts.count%></b></span>
+            <% end %>
           <% else %>
 
-            <%= button_to heart_path(post_id: post.id), remote: true,style:"width:27%;", class:"col s4 btn-flat center" do%>
+            <%= button_to heart_path(post_id: post.id), remote: true,style:"width:50%;", class:"col s4 btn-flat center" do%>
                 <i style="vertical-align: middle; font-size:2.5em;" class="material-icons">favorite_border</i>
 
-                <% if post.hearts.count > 0 %>
-                  <span class="blue-text like-text"><b><%= post.hearts.count%></b></span>
-                <% end %>
-
             <% end %>
+
+                            <% if post.hearts.count > 0 %>
+                              <span class="blue-text like-text"><b><%= post.hearts.count%></b></span>
+                            <% end %>
     <% end %>
+<% end %>
+
+<% if client_signed_in? or user_signed_in? %>
+  <% else %>
+  <i style="vertical-align: middle; font-size:2.5em;" class="material-icons red-text">favorite</i>
+  <span class="blue-text like-text"><b><%= post.hearts.count%></b></span>
 <% end %>
