--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container white-text">
+<div class="container grey-text darken-4">
   <h5>Ofrecer Producto o Servicio</h6>
 
   <%= render 'form' %>
