--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container white-text">
+<div class="container grey-text darken-4">
   <h5>Editar Publicación</h5>
 
   <%= render 'form_nomodal' %>
