--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,6 +1,6 @@
 
-<h5 class="white-text">Editar Perfil Público</h5>
-<p class="white-text">
+<h5 class="grey-text darken-4">Editar Perfil Público</h5>
+<p class="grey-text darken-4">
   Esta información se mostrará publicamente y será visto por todos los usuarios.
 </p>
 <%= form_for @user.profile do |f|%>
