--- a/app/views/profiles/_profile_info.html.erb
+++ b/app/views/profiles/_profile_info.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <div style="padding-left:5%;" class="col s8 m6 white-text">
+  <div style="padding-left:5%;" class="col s8 m6 grey-text darken-4">
     <b><%= @profile.name %></b>
     <br>
     <table class="striped centered black-text">
