--- a/app/views/offers/_offerts.html.erb
+++ b/app/views/offers/_offerts.html.erb
@@ -2,7 +2,7 @@
 
   <p id="notice"><%= notice %></p>
 
-<div class="container white-text">
+<div class="container grey-text darken-4">
     <h5>Ofertas</h5>
 </div>
 
