Update and Fix views

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,8 +13,8 @@
 
 <div class="row" style="margin-bottom: 0px">
   <div class="col s9">
-    <%= f.text_area :body, class:"materialize-textarea", style:"
-    background:#E6E6E6;
+    <%= f.text_area :body, placeholder:"Escribe tu comentario", class:"materialize-textarea", style:"
+    background:#F2F2F2;
     padding-bottom: 0px;
     margin-bottom: 0px;" %>
   </div>
