--- a/app/views/welcome/_posts.html.erb
+++ b/app/views/welcome/_posts.html.erb
@@ -53,7 +53,7 @@
           <% end %>
           <div class="col s4 center">
             <%= link_to post do %>
-              <i class="material-icons like-text" style="font-size:2.5rem">message</i>
+              <i class="material-icons like-text" style="font-size:2.5rem">forum</i>
             <% end %>
           </div>
           <div class="col s4 center">
