--- a/app/views/welcome/_posts.html.erb
+++ b/app/views/welcome/_posts.html.erb
@@ -59,7 +59,7 @@
           <div class="col s4 center">
             <i class="material-icons like-text" style="font-size:2.5rem">share</i>
           </div>
-
+        </div>
    </ul>
 <% end %>
 <% end %>
